# fabric-launcher

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINTING.md  MANIFEST.in  PACKAGE_STRUCTURE.md  QUICKSTART.md  README.md  build.bat  build.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  validate_tests.py
.github/workflows/: python-publish.yml  tests.yml
docs/: API.md  QUICKSTART.md  README.md  fixing-zero-logicalids.md
examples/: README.md  accessing_launcher_properties.py  advanced_deployment_examples.py  advanced_usage.py  basic_deployment_examples.py  deployment_config_example.yaml  eventhouse_and_sql_examples.py  post_deployment_utils_examples.py  production_workflow.py  staged_deployment.py  staged_deployment_examples.py
fabric_launcher/: __init__.py  config_manager.py  deployment_report.py  deployment_validator.py  fabric_deployer.py  file_operations.py  github_downloader.py  launcher.py  notebook_executor.py  platform_file_fixer.py  post_deployment_utils.py
fabric_launcher/examples/: Example_Deployment.ipynb  example_usage.py
tests/: README.md  __init__.py  conftest.py  test_config_manager.py  test_deployment_report.py  test_deployment_validator.py  test_fabric_deployer.py  test_file_operations.py  test_github_downloader.py  test_launcher.py  test_notebook_executor.py  test_platform_file_fixer.py  test_post_deployment_utils.py
