[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-launcher"
version = "0.4.0"
description = "A wrapper around fabric-cicd for deploying Fabric solutions from GitHub repositories"
readme = "README.md"
authors = [
    {name = "Slava Trofimov", email = "Slava.Trofimov@microsoft.com"},
    {name = "Tonio Lora", email = "Tonio.Lora@microsoft.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fabric-cicd>=0.1.0",
    "azure-core>=1.26.0",
    "azure-identity>=1.12.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/microsoft/fabric-launcher"
Documentation = "https://github.com/microsoft/fabric-launcher/blob/main/README.md"
"Bug Reports" = "https://github.com/microsoft/fabric-launcher/issues"
"Source Code" = "https://github.com/microsoft/fabric-launcher"

[project.optional-dependencies]
# Fabric runtime dependencies (pre-installed in Fabric notebooks)
fabric = [
    "semantic-link-sempy>=0.7.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
]
# Test dependencies only
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fabric_launcher*"]

[tool.ruff]
# Ruff configuration for linting and formatting
target-version = "py310"
line-length = 120

# Enable specific rule sets
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "ARG002", # Unused method argument (common in overrides)
    "PTH123", # Use pathlib instead of os.path.open (notebookutils uses os)
]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]  # Allow unused arguments in tests
"examples/*" = ["ARG001"]         # Allow unused arguments in examples

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Preserve line endings
line-ending = "auto"
